# my-first-cli-tool

./: Cargo.toml  README.md
src/: lib.rs  lib_test.rs  main.rs
