[package]
name = "r4_grrs"
version = "0.1.1"
edition = "2021"
authors = ["R4 Cheng <schaffenneu47@gmail.com>"]
license = "MIT"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/chengr4/my-first-cli-tool"
repository = "https://github.com/chengr4/my-first-cli-tool"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
anyhow = "1.0.71"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
assert_fs = "1.0.13"